weather-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-app-deployment
spec:
  selector:
    matchLabels:
      app: weather-app
  template:
    metadata:
      labels:
        app: weather-app
    spec:
      containers:
      - name: weather-app-container
        image: dennyherbrich/weather-app:v1.0.3
        ports:
        - containerPort: 8000
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 15
        resources:
          limits:
            cpu: "1" # 1 CPU core
            memory: "512Mi" # 512 megabytes of memory
          requests:
            cpu: "0.5" # 0.5 CPU core
            memory: "256Mi" # 256 megabytes of memory
