weather-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather-app
spec:
  selector:
    app: weather-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
