weather-app/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: weather-app
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`weather.dev.dev-denny.cloudns.be`)
    kind: Rule
    services:
    - name: weather-app
      port: 80
